--- a/vue/选项.html
+++ b/vue/选项.html
@@ -32,14 +32,14 @@
         }
         
     </style>
-</head>
+</head>asd
 <body>
     <div id="wrapper" @submit prevent class="text-center">
         <p>todolist</p>
         <p><input type="text" v-model='key' value="index">
         <button type="submit"  @click='select'>搜索</button></p>
         <div>
-            名称：<input v-model='cloth' type="text">
+            名称：<input v-model='cloth'  type="text">
             价格：<input v-model.number='cost' type="number">
             <button type="submit" @click='add'>添加</button>
             
